# burn-wgpu-yolov2-mve

./: Cargo.toml  README.md
src/: main.rs  yolov2.rs
